FISH-8652: Fix byte reading in tests.